# gene-context-model

./: .gitignore  README.md  main.py  pyproject.toml
src/model/: cnv_encoder.py  constants.py  data.retrieval.py  data_loader.py  data_retrieval.py  dataclass.py  fusion.py  gene_model.py  mask.py  pray.py  predictor.py  projection.py  rna_encoder.py  snv.py  snv_encoder.py  test_model.py  train.py  transformer.py
